--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -69,3 +69,30 @@ note = "[]"
 	url = {https://gs.statcounter.com/os-market-share/desktop-mobile/worldwide/#monthly-200901-202006},
 	note = "[]"
 }
+
+@misc{ google:playservices,
+	author = "Google",
+	title = "",
+	year = "2020",
+	url = {https://play.google.com/store/apps/details?id=com.google.android.gms&hl=es_419},
+	note = "[]"
+}
+
+@misc{ google:firebase,
+	author = "Google",
+	title = "",
+	year = "2020",
+	url = {https://firebase.google.com/docs/database?hl=es},
+	note = "[]"
+}
+
+@misc{ google:material,
+	author = "Google",
+	title = "",
+	year = "2020",
+	url = {https://material.io/design},
+	note = "[]"
+}
+
+
+
