--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -49,7 +49,7 @@ En el mercado existen muchos frameworks disponibles para el desarrollo de aplica
 Uno de los objetivos a la hora de encontrar el framework con el que hacer la aplicación, es que abarque el mayor número de dispositivos y usuarios. Es decir, que sea un framework \emph{crossplatform} o multiplataforma .
 
 \subsubsection{Ionic}
-Ionic~\cite{wiki:ionnic} se basa en lenguaje de programación javascript, html y css. Internamente esta basado en otro framework, como es Angularjs. La licencia es Open source, fue lanzado en el 2013 y permite el desarrollo para iOS y Android. A sufrido gran cantidad de cambios desde entonces.
+Ionic~\cite{wiki:ionnic} se basa en los lenguajes de programación: Javascript, HTML y CSS. Internamente esta basado en otro framework, como es AngularJS. La licencia es \emph{Open Source}, fue lanzado en el 2013 y permite el desarrollo para iOS y Android. Ha sufrido gran cantidad de cambios desde entonces.
 
 Ventajas:
 \begin{itemize}
@@ -65,7 +65,7 @@ Algunas de las desventajas:
 
 \subsubsection{React native}
 React native~\cite{wiki:react} fue creado en 2015 de la mano de Facebook. La licencia que tiene es MIT. La diferencia que tiene con React original, es que no manipula el DOM, por lo que tampoco usa HTML o CSS. 
-Se programa en javascript. Las aplicaciones más conocidas que usan este framework son Instagram y Facebook.
+Se programa en Javascript. Las aplicaciones más conocidas que usan este framework son Instagram y Facebook.
 
 Ventajas:
 \begin{itemize}
@@ -86,38 +86,38 @@ Ventajas:
 \begin{itemize}
 	\item Permite el desarrollo de iOS, Android, web y nativas de escritorio.
 	\item Puede llamar a fragmentos de código en otros lenguajes usados en otras plataformas.
-	\item Soporte para wearables.
+	\item Soporte para \emph{wearables} o dispositivos que se pueden llevar puestos.
 \end{itemize}
 
 Algunas de las desventajas:
 \begin{itemize}
 	\item Acceso limitado a las bibliotecas.
 	\item El soporte es escaso y las actualizaciones son poco frecuentes.
-	\item Comunidad grande pero pequeña comparada con otras.
+	\item Comunidad pequeña comparada con otras.
 	\item Aplicaciones de mayor tamaño.
 	\item Mayor coste que otras.
 \end{itemize}
 
 \subsubsection{Otros}
-Hay muchos otros, como kotlin, Apache Cordoba, jQuery Mobile, Native script...
+Hay muchos otros, como Kotlin, Apache Cordoba, jQuery Mobile, Native script...
 Pero no me convencieron por diversas razones, como la curva de aprendizaje, costes, dificultades técnicas, entre otras.
  
 \section{Flutter}
 Flutter~\cite{wiki:flutter} es un SDK de código abierto creado por Google a finales del 2018. Permite que los desarrolladores puedan crear aplicaciones para iOS, Android y web.
 
-Se encuentra escrito en Dart, que es un lenguaje de programación creado por Google en 2011. Pretende conseguir una mejora del lenguaje javascript, pero sin querer sustituirlo. Es decir, ofrecer mejores resultados y alternativas para algunos problemas, siendo una herramienta de mayor calidad para proyectos más grandes y que necesitan un desarrollo veloz.
+Se encuentra escrito en Dart, que es un lenguaje de programación creado por Google en 2011. Pretende conseguir una mejora del lenguaje Javascript, pero sin querer sustituirlo. Es decir, ofrecer mejores resultados y alternativas para algunos problemas, siendo una herramienta de mayor calidad para proyectos más grandes y que necesitan un desarrollo veloz.
 
 Flutter es una herramienta muy reciente, con la que se pueden hacer aplicaciones comerciales para varias plataformas sin tener que programar exclusivamente para cada una de ellas. Ya que nos ofrece la compilación nativa directamente, reduciendo los costes a la hora de tener que llevar proyectos en los que sea necesario estar varias plataformas.
 
 Las características más importantes son: 
 
 \begin{itemize}
-	\item Desarrollo rápido de las aplicaciones. Cuando se dice rápido es porque permite \emph{hot reload}. Lo que significa carga en caliente durante la fase de desarrollo. Implica que no es necesario tener que compilar todo el código, si no aquellas partes que fueron modificadas. Lo que permite en tiempo de ejecución ver los cambios.
+	\item Desarrollo rápido de las aplicaciones. Cuando se dice rápido es porque permite \emph{hot reload}. Lo que significa carga en caliente durante la fase de desarrollo. Implica que no es necesario tener que compilar todo el código, sino aquellas partes que fueron modificadas. Lo que permite en tiempo de ejecución ver los cambios.
 	\item Está muy optimizado, con una evolución y soporte constante.
-	\item Es un lenguaje de programación respaldado por Google, con lo que esto conlleva. Seguridad, confianza, fiabilidad, soporte, cursos y un montón de herramientas (más de 300 apis distintas: mapas, reconocimiento facial, traductor ...).
+	\item Es un lenguaje de programación respaldado por Google, con lo que esto conlleva. Seguridad, confianza, fiabilidad, APIs distintas: mapas, reconocimiento facial, traductor ...).
 	\item La integración con el sistema operativo Android es mucho más eficaz, ya que este también pertenece a Google.
 	\item Cuando se compila lo hace a nativo, ofreciendo una ganancia de rendimiento.
-	\item La curva de aprendizaje es baja, en el caso de que sepamos javascript, typescript o ecmascript. Pero en caso contrario, no es especialmente empinada.
+	\item La curva de aprendizaje es baja, en el caso de que sepamos Javascript, Typescript o Escmascript. Pero en caso contrario, no es especialmente empinada.
 	\item La calidad de las animaciones y transiciones.
 \end{itemize}
 
@@ -133,16 +133,16 @@ Al final me decanté por este Framework básicamente porque es algo nuevo y disr
 Otra de las cosas que me incentivaron a elegirlo es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta~\ref{fig:encuesta} anterior, se encuentra entre los favoritos de los desarrolladores.
 
 \subsection{Firebase}
-Firebase~\cite{wiki:firebase} es una plataforma para el desarollo de aplicaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
+Firebase~\cite{wiki:firebase} es una plataforma para el desarrollo de aplicaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
 
 Fue integrada en el proyecto por el hecho de ser un servicio gratuito y que aportaba gran valor a la aplicación. Firebase pasa a ser de pago cuando la app tiene que escalarse a un nivel más grande, por el crecimiento en número de usuarios o la gran cantidad de peticiones que se realicen a la misma. Algunas de las herramientas que integra son de pago, otras no.
 
-Por lo tanto al ser multiplataforma es un backend con el que poder controlar todo, ganancias, gastos, escalabilidad, nuevos productos, herramientas... 
+Por lo tanto al ser multiplataforma es un \emph{backend} con el que poder controlar todo, ganancias, gastos, escalabilidad, nuevos productos, herramientas... 
 
 Entre los servicios que ofrece destacan entre otros:
 
 \begin{itemize}
-	\item \textbf{Real Time Data Base:} base de datos simples en tiempo real, si fuera necesario tener que guardar música, video o fotos, tiene otra parte dedicada a ficheros llamada \emph{Storage}.
+	\item \textbf{Real Time Data Base:} base de datos simples en tiempo real, si fuera necesario tener que guardar música, vídeo o fotos, tiene otra parte dedicada a ficheros llamada \emph{Storage}.
 	\item \textbf{Crash reporting:} herramienta para el reporte de errores que se producen en la aplicación.
 	\item \textbf{Autentication:} integración con la mayor cantidad de aplicaciones de redes sociales en las que su API permite la identificación de usuarios. Obviamente el propio Google es una de ellas. Lo podemos ver en la siguiente imagen~\ref{fig:inicio}:
 	\begin{figure}[H]
@@ -151,9 +151,9 @@ Entre los servicios que ofrece destacan entre otros:
 		\caption{Inicio de sesión}\label{fig:inicio}
 	\end{figure}
 	\item \textbf{Test lab:} probar la aplicación antes de realizar el despliegue de la misma. También el lanzamiento de pruebas alfa y beta.
-	\item \textbf{Remote config:} hacer cambios internos del funcionamiento de la aplicación sin tener que recomplilar o actualizar.
+	\item \textbf{Remote config:} hacer cambios internos del funcionamiento de la aplicación sin tener que recompilar o actualizar.
 	\item \textbf{Hosting:} servidor donde se puede publicar una página web.
-	\item \textbf{Análisis:} mediante las analíticas que ofrece~\ref{fig:numerousers}, sirve como herramienta de toma de decisiones. Pudiendo optimizar a que mercados dirigirse mediante una estrategia de marketing.
+	\item \textbf{Análisis:} mediante las analíticas que ofrece, como se puede ver en la figura~\ref{fig:numerousers}, sirve como herramienta de toma de decisiones. Pudiendo optimizar a que mercados dirigirse mediante una estrategia de marketing.
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=1\textwidth]{teoria/numerousers.png}
